# tiny-rpc

./: Cargo.toml  LICENSE
.github/workflows/: main.yml
tiny-rpc/: Cargo.toml
tiny-rpc-macros/: Cargo.toml
tiny-rpc-macros/src/: helper.rs  lib.rs
tiny-rpc/src/: error.rs  io.rs  lib.rs  rpc.rs  serialize.rs  test.rs
