[package]
name = "tiny-rpc"
version = "0.3.0"
authors = ["zhoukz <me@zhoukz.com>"]
edition = "2018"
license = "MIT"
description = "A small and easy to use RPC framework."
repository = "https://github.com/zhoukezi/tiny-rpc.git"
keywords = ["rpc"]

[dependencies]
bincode = "1.3.1"
bytes = "1.0.1"
futures = "0.3.12"
pin-project = "1.0.5"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
tiny-rpc-macros = { version = "=0.3.0", path = "../tiny-rpc-macros" }
tokio = { version = "1.2.0", features = ["rt"] }
tokio-util = { version = "*", features = ["codec"] }
tracing = "0.1.24"

[dev-dependencies]
async-trait = "0.1.42"
tokio = { version = "1.2.0", features = ["full"] }
tracing-subscriber = "0.2.16"
