[package]
name = "tiny-rpc"
version = "0.3.2"
authors = ["zhoukz <me@zhoukz.com>"]
edition = "2018"
license = "MIT"
description = "A small and easy to use RPC framework."
repository = "https://github.com/zhoukezi/tiny-rpc.git"
keywords = ["rpc"]

[dependencies]
bincode = "1.3.3"
bytes = "1.0.1"
futures = "0.3.14"
serde = "1.0.125"
serde_derive = "1.0.125"
tiny-rpc-macros = { version = "=0.3.2", path = "../tiny-rpc-macros" }
tokio = { version = "1.5.0", features = ["rt"] }
tokio-util = { version = "0.6.6", features = ["codec"] }
tracing = "0.1.25"

[dev-dependencies]
async-trait = "0.1.50"
tokio = { version = "1.5.0", features = ["full"] }
tracing-subscriber = "0.2.17"
